<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">课程表</string>
    <string name="app_name_small">课程表</string>
    <string name="version">版本号:</string>
    <string name="version_NUMBER">1.0</string>
    <string name="author">孙国宝</string>
    <string name="writer">作者:</string>
    <string name="weibo">http://www.baidu.com</string>
    <string name="thanks">thanks</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

</resources>