<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:umadsdk="http://schemas.android.com/apk/res/com.yarin.android.TodayDate"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/about_background" >

    <ImageView
        android:id="@+id/about_iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/about" />

    <RelativeLayout
        android:id="@+id/about_rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_iv1"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/about_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writer"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/about_tv1"
            android:layout_toRightOf="@id/about_tv1"
            android:paddingLeft="15dp"
            android:text="@string/author"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/about_tv1"
            android:layout_below="@id/about_tv1"
            android:text="@string/version"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/about_tv3"
            android:layout_toRightOf="@id/about_tv3"
            android:paddingLeft="15dp"
            android:text="@string/version_NUMBER"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_tv3"
            android:layout_centerHorizontal="true"
            android:autoLink="web"
            android:text="@string/weibo"
            android:textSize="20sp"
            android:textStyle="italic" />
    </RelativeLayout>

</RelativeLayout>