<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_week_course_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_week"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:textColor="#666666"
            android:textSize="10sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/main_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="#666666" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="#666666" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="#666666" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="#666666" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="#666666" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_line" />

    <com.sgb.myWidget.OverScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_class_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="6"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="8"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="9"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="11"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="12"
                    android:textColor="#666666"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp" >
            </LinearLayout>
        </LinearLayout>
    </com.sgb.myWidget.OverScrollView>

</LinearLayout>